gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16193.d
version https://git-lfs.github.com/spec/v1
oid sha256:f44488097fea697a25dd2adb7a5e43c5c1e7e6bed0685cc630fd9b00f9721349
size 1123
